fix weird horizontal scroll that appeared

--- a/src/styles/styles.sass
+++ b/src/styles/styles.sass
@@ -84,7 +84,7 @@ ul a:hover,
   color: rgb(179, 86, 75);
 
 .full-width-image 
-  width: 100vw;
+  width: 100%;
   height: 400px;
   background-size: cover;
   background-position: center;
